feat: add header and change main select configuration

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Indie+Flower" />
     <div id="root"></div>
     <!--
       This HTML file is a template.
