feat: add classnames, logo and changes on the headerr

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
       type="text/css"
       href="//fonts.googleapis.com/css?family=Indie+Flower"
     />
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan&display=swap" rel="stylesheet">
     <div id="root"></div>
     <!--
       This HTML file is a template.
